WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241780
[CSS Container Queries] Container units don't work in gradients
https://bugs.webkit.org/show_bug.cgi?id=241780
Summary
[CSS Container Queries] Container units don't work in gradients
Antti Koivisto
Reported
2022-06-20 04:33:20 PDT
Fix cqi etc in gradients
Attachments
Patch
(8.50 KB, patch)
2022-06-20 04:43 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(8.54 KB, patch)
2022-06-20 04:47 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2022-06-20 04:43:37 PDT
Created
attachment 460351
[details]
Patch
Antti Koivisto
Comment 2
2022-06-20 04:47:46 PDT
Created
attachment 460352
[details]
Patch
Tim Nguyen (:ntim)
Comment 3
2022-06-20 06:27:12 PDT
Comment on
attachment 460352
[details]
Patch r=me
EWS
Comment 4
2022-06-20 07:45:27 PDT
Committed
r295675
(
251680@main
): <
https://commits.webkit.org/251680@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 460352
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-06-20 07:46:13 PDT
<
rdar://problem/95537710
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug